// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Security Side Nav registers the navigation tree definition for serverless security 1`] = `
Object {
  "body": Array [
    Object {
      "breadcrumbStatus": "hidden",
      "children": Array [
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "link": "discover",
            },
            Object {
              "children": Array [
                Object {
                  "id": "overview",
                  "link": "securitySolutionUI:overview",
                },
                Object {
                  "id": "detection_response",
                  "link": "securitySolutionUI:detection_response",
                },
                Object {
                  "id": "cloud_security_posture-dashboard",
                  "link": "securitySolutionUI:cloud_security_posture-dashboard",
                },
                Object {
                  "id": "cloud_security_posture-vulnerability_dashboard",
                  "link": "securitySolutionUI:cloud_security_posture-vulnerability_dashboard",
                },
                Object {
                  "id": "entity_analytics",
                  "link": "securitySolutionUI:entity_analytics",
                },
                Object {
                  "id": "data_quality",
                  "link": "securitySolutionUI:data_quality",
                },
              ],
              "id": "dashboards",
              "link": "securitySolutionUI:dashboards",
              "renderAs": "item",
            },
          ],
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "id": "rules-add",
                          "link": "securitySolutionUI:rules-add",
                        },
                        Object {
                          "id": "rules-create",
                          "link": "securitySolutionUI:rules-create",
                        },
                      ],
                      "id": "rules",
                      "link": "securitySolutionUI:rules",
                      "renderAs": "item",
                    },
                    Object {
                      "id": "cloud_security_posture-benchmarks",
                      "link": "securitySolutionUI:cloud_security_posture-benchmarks",
                    },
                    Object {
                      "id": "exceptions",
                      "link": "securitySolutionUI:exceptions",
                    },
                    Object {
                      "id": "siem_migrations-rules",
                      "link": "securitySolutionUI:siem_migrations-rules",
                    },
                  ],
                  "title": "Management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "coverage-overview",
                      "link": "securitySolutionUI:coverage-overview",
                    },
                  ],
                  "title": "Discover",
                },
              ],
              "id": "securityGroup:rules",
              "renderAs": "panelOpener",
              "title": "Rules",
            },
            Object {
              "id": "alerts",
              "link": "securitySolutionUI:alerts",
            },
            Object {
              "id": "attack_discovery",
              "link": "securitySolutionUI:attack_discovery",
            },
            Object {
              "id": "cloud_security_posture-findings",
              "link": "securitySolutionUI:cloud_security_posture-findings",
            },
            Object {
              "children": Array [
                Object {
                  "id": "cases_create",
                  "link": "securitySolutionUI:cases_create",
                },
                Object {
                  "id": "cases_configure",
                  "link": "securitySolutionUI:cases_configure",
                },
              ],
              "id": "cases",
              "link": "securitySolutionUI:cases",
              "renderAs": "item",
            },
          ],
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "id": "timelines-templates",
                      "link": "securitySolutionUI:timelines-templates",
                    },
                  ],
                  "id": "timelines",
                  "link": "securitySolutionUI:timelines",
                  "renderAs": "item",
                },
                Object {
                  "id": "notes",
                  "link": "securitySolutionUI:notes",
                },
                Object {
                  "link": "osquery",
                },
              ],
              "id": "securityGroup:investigations",
              "renderAs": "panelOpener",
              "title": "Investigations",
            },
            Object {
              "id": "threat_intelligence",
              "link": "securitySolutionUI:threat_intelligence",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-all",
                      "link": "securitySolutionUI:hosts-all",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-uncommon_processes",
                      "link": "securitySolutionUI:hosts-uncommon_processes",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-anomalies",
                      "link": "securitySolutionUI:hosts-anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-events",
                      "link": "securitySolutionUI:hosts-events",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-risk",
                      "link": "securitySolutionUI:hosts-risk",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-sessions",
                      "link": "securitySolutionUI:hosts-sessions",
                    },
                  ],
                  "id": "hosts",
                  "link": "securitySolutionUI:hosts",
                  "renderAs": "item",
                },
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-flows",
                      "link": "securitySolutionUI:network-flows",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-dns",
                      "link": "securitySolutionUI:network-dns",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-http",
                      "link": "securitySolutionUI:network-http",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-tls",
                      "link": "securitySolutionUI:network-tls",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-anomalies",
                      "link": "securitySolutionUI:network-anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-events",
                      "link": "securitySolutionUI:network-events",
                    },
                  ],
                  "id": "network",
                  "link": "securitySolutionUI:network",
                  "renderAs": "item",
                },
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-all",
                      "link": "securitySolutionUI:users-all",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-authentications",
                      "link": "securitySolutionUI:users-authentications",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-anomalies",
                      "link": "securitySolutionUI:users-anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-risk",
                      "link": "securitySolutionUI:users-risk",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-events",
                      "link": "securitySolutionUI:users-events",
                    },
                  ],
                  "id": "users",
                  "link": "securitySolutionUI:users",
                  "renderAs": "item",
                },
              ],
              "id": "securityGroup:explore",
              "renderAs": "panelOpener",
              "title": "Explore",
            },
          ],
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "link": "fleet:agents",
                    },
                    Object {
                      "link": "fleet:policies",
                      "title": "Policies",
                    },
                    Object {
                      "link": "fleet:enrollment_tokens",
                    },
                    Object {
                      "link": "fleet:uninstall_tokens",
                    },
                    Object {
                      "link": "fleet:data_streams",
                    },
                    Object {
                      "link": "fleet:settings",
                    },
                  ],
                  "link": "fleet",
                  "title": "Fleet",
                },
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "endpoints",
                      "link": "securitySolutionUI:endpoints",
                    },
                    Object {
                      "id": "policy",
                      "link": "securitySolutionUI:policy",
                    },
                    Object {
                      "id": "trusted_apps",
                      "link": "securitySolutionUI:trusted_apps",
                    },
                    Object {
                      "id": "event_filters",
                      "link": "securitySolutionUI:event_filters",
                    },
                    Object {
                      "id": "host_isolation_exceptions",
                      "link": "securitySolutionUI:host_isolation_exceptions",
                    },
                    Object {
                      "id": "blocklist",
                      "link": "securitySolutionUI:blocklist",
                    },
                    Object {
                      "id": "response_actions_history",
                      "link": "securitySolutionUI:response_actions_history",
                    },
                  ],
                  "id": "endpoints",
                  "link": "securitySolutionUI:endpoints",
                  "title": "Endpoints",
                },
                Object {
                  "renderItem": [Function],
                  "title": "",
                },
              ],
              "id": "securityGroup:assets",
              "renderAs": "panelOpener",
              "title": "Assets",
            },
            Object {
              "children": Array [
                Object {
                  "id": "entity_analytics-privileged_user_monitoring",
                  "link": "securitySolutionUI:entity_analytics-privileged_user_monitoring",
                },
              ],
              "id": "securityGroup:entityAnalytics",
              "renderAs": "panelOpener",
              "title": "Entity Analytics",
            },
          ],
        },
        Object {
          "children": Array [
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "link": "ml:overview",
                  "title": "Overview",
                },
                Object {
                  "link": "ml:dataVisualizer",
                  "title": "Data visualizer",
                },
              ],
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "link": "ml:anomalyExplorer",
                  "title": "Anomaly explorer",
                },
                Object {
                  "link": "ml:singleMetricViewer",
                  "title": "Single metric viewer",
                },
              ],
              "title": "Anomaly detection",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "link": "ml:resultExplorer",
                  "title": "Result explorer",
                },
                Object {
                  "link": "ml:analyticsMap",
                  "title": "Analytics map",
                },
              ],
              "title": "Data frame analytics",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "link": "ml:logRateAnalysis",
                  "title": "Log rate analysis",
                },
                Object {
                  "link": "ml:logPatternAnalysis",
                  "title": "Log pattern analysis",
                },
                Object {
                  "link": "ml:changePointDetections",
                  "title": "Change point detection",
                },
              ],
              "title": "Aiops labs",
            },
          ],
          "id": "securityGroup:machineLearning",
          "renderAs": "panelOpener",
          "title": "Machine learning",
        },
      ],
      "defaultIsCollapsed": false,
      "icon": "logoSecurity",
      "id": "security_solution_nav",
      "isCollapsible": false,
      "title": "Security",
      "type": "navGroup",
    },
  ],
  "footer": Array [
    Object {
      "icon": "launch",
      "id": "get_started",
      "link": "securitySolutionUI:get_started",
      "type": "navItem",
    },
    Object {
      "icon": "editorCodeBlock",
      "link": "dev_tools",
      "title": "Developer tools",
      "type": "navItem",
    },
    Object {
      "breadcrumbStatus": "hidden",
      "children": Array [
        Object {
          "children": Array [
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:index_management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:transform",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:ingest_pipelines",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:dataViews",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:jobsListLink",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:pipelines",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:data_quality",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:data_usage",
                },
              ],
              "title": "Data",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:api_keys",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:roles",
                },
                Object {
                  "cloudLink": "userAndRoles",
                  "title": "Manage organization members",
                },
              ],
              "title": "Access",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:triggersActions",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:triggersActionsConnectors",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:maintenanceWindows",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "id": "entity_analytics-management",
                  "link": "securitySolutionUI:entity_analytics-management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "id": "entity_analytics-entity_store_management",
                  "link": "securitySolutionUI:entity_analytics-entity_store_management",
                },
              ],
              "title": "Alerts and Insights",
            },
            Object {
              "children": Array [
                Object {
                  "link": "management:overview",
                },
                Object {
                  "link": "management:anomaly_detection",
                },
                Object {
                  "link": "management:analytics",
                },
                Object {
                  "link": "management:trained_models",
                },
                Object {
                  "link": "management:supplied_configurations",
                },
              ],
              "title": "Machine learning",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:spaces",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:objects",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:filesManagement",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:reporting",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:tags",
                },
                Object {
                  "link": "maps",
                },
                Object {
                  "link": "visualize",
                },
              ],
              "title": "Content",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:settings",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:securityAiAssistantManagement",
                },
              ],
              "title": "Other",
            },
          ],
          "id": "stack_management",
          "renderAs": "panelOpener",
          "spaceBefore": null,
          "title": "Stack Management",
        },
        Object {
          "link": "integrations",
        },
        Object {
          "cloudLink": "billingAndSub",
        },
      ],
      "icon": "gear",
      "id": "category-management",
      "title": "Project Settings",
      "type": "navGroup",
    },
  ],
}
`;

exports[`Security Side Nav registers the navigation tree definition for serverless security with AI SOC 1`] = `
Object {
  "body": Array [
    Object {
      "breadcrumbStatus": "hidden",
      "children": Array [
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "id": "alert_summary",
              "link": "securitySolutionUI:alert_summary",
            },
            Object {
              "id": "attack_discovery",
              "link": "securitySolutionUI:attack_discovery",
            },
          ],
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "id": "cases_create",
                  "link": "securitySolutionUI:cases_create",
                },
                Object {
                  "id": "cases_configure",
                  "link": "securitySolutionUI:cases_configure",
                },
              ],
              "id": "cases",
              "link": "securitySolutionUI:cases",
              "renderAs": "item",
            },
            Object {
              "children": Array [
                Object {
                  "id": "configurations-ai_settings",
                  "link": "securitySolutionUI:configurations-ai_settings",
                },
                Object {
                  "id": "configurations-basic_rules",
                  "link": "securitySolutionUI:configurations-basic_rules",
                },
                Object {
                  "id": "configurations-integrations",
                  "link": "securitySolutionUI:configurations-integrations",
                },
              ],
              "id": "configurations",
              "link": "securitySolutionUI:configurations",
              "renderAs": "item",
            },
          ],
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "link": "discover",
            },
          ],
        },
      ],
      "defaultIsCollapsed": false,
      "icon": [Function],
      "id": "security_solution_ai_nav",
      "isCollapsible": false,
      "title": "AI for SOC",
      "type": "navGroup",
    },
  ],
  "footer": Array [
    Object {
      "icon": "launch",
      "id": "get_started",
      "link": "securitySolutionUI:get_started",
      "type": "navItem",
    },
    Object {
      "icon": "editorCodeBlock",
      "link": "dev_tools",
      "title": "Developer tools",
      "type": "navItem",
    },
    Object {
      "breadcrumbStatus": "hidden",
      "children": Array [
        Object {
          "children": Array [
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:index_management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:transform",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:ingest_pipelines",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:dataViews",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:jobsListLink",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:pipelines",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:data_quality",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:data_usage",
                },
              ],
              "title": "Data",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:api_keys",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:roles",
                },
                Object {
                  "cloudLink": "userAndRoles",
                  "title": "Manage organization members",
                },
              ],
              "title": "Access",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:triggersActions",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:triggersActionsConnectors",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:maintenanceWindows",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "id": "entity_analytics-management",
                  "link": "securitySolutionUI:entity_analytics-management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "id": "entity_analytics-entity_store_management",
                  "link": "securitySolutionUI:entity_analytics-entity_store_management",
                },
              ],
              "title": "Alerts and Insights",
            },
            Object {
              "children": Array [
                Object {
                  "link": "management:overview",
                },
                Object {
                  "link": "management:anomaly_detection",
                },
                Object {
                  "link": "management:analytics",
                },
                Object {
                  "link": "management:trained_models",
                },
                Object {
                  "link": "management:supplied_configurations",
                },
              ],
              "title": "Machine learning",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:spaces",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:objects",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:filesManagement",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:reporting",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:tags",
                },
                Object {
                  "link": "maps",
                },
                Object {
                  "link": "visualize",
                },
              ],
              "title": "Content",
            },
            Object {
              "breadcrumbStatus": "hidden",
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:settings",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "link": "management:securityAiAssistantManagement",
                },
              ],
              "title": "Other",
            },
          ],
          "id": "stack_management",
          "renderAs": "panelOpener",
          "spaceBefore": null,
          "title": "Stack Management",
        },
        Object {
          "link": "integrations",
        },
        Object {
          "cloudLink": "billingAndSub",
        },
      ],
      "icon": "gear",
      "id": "category-management",
      "title": "Project Settings",
      "type": "navGroup",
    },
  ],
}
`;
